# QA-SA-DevOps

./: .gitignore  README.md  index.html
.github/: README.md
.github/workflows/: deploy.yml
api/: .env.example  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
api/middleware/: auth_middleware.py  public_routes.py
api/models/: booking.py  building.py  room.py  room_type.py  user.py
api/routes/: __init__.py  bookings.py  buildings.py  room_types.py  rooms.py  users.py
api/scripts/: seed_admin.py
api/services/: auth_service.py  booking_service.py  building_service.py  room_service.py  room_type_service.py  user_service.py
api/tests/: conftest.py  test_auth_service.py  test_booking_service.py  test_building_service.py  test_room_service.py  test_room_type_service.py  test_user_service.py
api/tests/integration/: conftest.py  test_auth_api.py  test_bookings_api.py  test_buildings_api.py  test_room_types_api.py  test_rooms_api.py  test_users_api.py
api/typings/: __init__.py  auth.py  booking.py  building.py  room.py  room_type.py  user.py
infra/: README.md  cdk.json  deploy-ui.sh  deploy.sh  package-lock.json  package.json
infra/src/: app.ts  helpers.ts
infra/src/stacks/: api-stack.ts  frontend-stack.ts
ui/: README.md  package-lock.json  package.json
ui/src/: App.tsx  api.ts  types.ts
ui/src/components/: Navbar.tsx  ProtectedRoute.tsx
ui/src/components/admin/: BuildingsTab.tsx  RoomTypesTab.tsx  (+2 more)
ui/src/data/: mockData.ts
ui/src/pages/: AdminPage.tsx  BookingsPage.tsx  LoginPage.tsx  ProfilePage.tsx  RoomsPage.tsx
